# coagent

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
coagent/a2a/: agent.py  app.py  registry.py
coagent/agents/: __init__.py  chat_agent.py  dynamic_triage.py  mcp_agent.py  mcp_server.py  messages.py  model_client.py  parallel.py  sequential.py  triage.py  util.py
coagent/agents/aswarm/: core.py  util.py
coagent/agents/react_agent/: __init__.py  agent.py  context.py  types.py  util.py
coagent/agents/swarm/: core.py
coagent/cli/: main.py
coagent/core/: __init__.py  agent.py  discovery.py  exceptions.py  factory.py  logger.py  messages.py  runtime.py  types.py  util.py
coagent/cos/: README.md  agent.py  app.py  runtime.py
coagent/runtimes/: __init__.py  http_runtime.py  local_runtime.py  nats_runtime.py
examples/: client.py  rich_client.py  rich_client_textarea.py
examples/a2a/: README.md  app.py  client.py
examples/app-builder/: README.md  auto_team.py  dev.py  qa.py  team.py
examples/autogen/: README.md  autogen.py
examples/cos/: README.md  cos.js  cos.py  package.json
examples/cos/goagent/: cos.go  go.mod  go.sum
examples/deepseek-r1/: README.md  agent.py
examples/discovery/: README.md  client.py  server.py
examples/framework-integration/: README.md
examples/framework-integration/autogen/: README.md  agent.py
examples/framework-integration/smolagents/: README.md  agent.py
examples/mcp/: README.md  agent.py  server.py
examples/mcp-new/: README.md  daemon_agent.py  local_agent.py  server.py
examples/notification/: README.md  notification.py
examples/opencsg/: README.md  csghub.py  dataflow.py  opencsg.py
examples/patterns/: README.md  augmented_llm.py  autonomous_agent.py  chaining.py  parallelization.py  triaging.py
examples/ping-pong/: README.md  client.py  http_runtime_server.py  server.py
examples/stream-ping-pong/: README.md  client.py  server.py
examples/structured-outputs/: README.md  daemon_agent.py  local_agent.py
examples/translator/: README.md  translator.py
tests/agents/: conftest.py  mcp_server.py  test_chat_agent.py  test_mcp_agent.py  test_mcp_server.py  test_messages.py  test_structured_agent.py  test_util.py
tests/core/: conftest.py  test_agent.py  test_discovery.py  test_util.py
