[tool.poetry]
name = "coagent"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.14"
pydantic = "2.5.2"
openai = "1.52.1"
nats-py = "2.9.0"
textual = "0.85.1"
requests = "2.32.3"
pygtrie = "2.5.0"
httpx = "0.27.2"
h2 = "4.1.0"
httpx-sse = "0.4.0"
blinker = "1.9.0"
loguru = "0.7.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[tool.poetry.scripts]
coagent = "coagent.cli:main.main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
